--- a/coworkProject/src/main/resources/static/css/main.css
+++ b/coworkProject/src/main/resources/static/css/main.css
@@ -93,7 +93,6 @@ footer {
 }
 
 #footerBorder {
-   /* border-top: 1px solid #d9d9d9;*/
     background-color: #ECF2FA;
     min-width: 1110px;
 }
@@ -158,7 +157,7 @@ footer {
 .mainBanner {
     display: flex;
     margin: 60px 0;
-  /*  padding: 10px 50px; */
+    padding: 10px 50px; 
     justify-content: center;
     align-items: center;
     min-height: 400px;
@@ -169,6 +168,7 @@ footer {
 .phraseArea {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
 }
 
@@ -184,8 +184,7 @@ footer {
 }
 
 #bannerImg {
-    width: 660px;
-    margin-left: 300px;
+    width: 500px;
 }
 
 
