--- a/coworkProject/src/main/resources/templates/user/login.html
+++ b/coworkProject/src/main/resources/templates/user/login.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <main>
+            <!-- 로고 -->
+            <div>
+                <img src="/images/coworkLogoB.png" class="coworkLogoB">
+            </div>
+
             <section class="formArea">
                 <span id="loginLetter">로그인</span>
                 <div class="loginInput">
@@ -23,5 +28,16 @@
                 </div>
             </section>
         </main>
+
+        <!-- 로고 클릭시 메인페이지 이동 -->
+        <script th:inline="javascript">
+            const coworkLogoB = document.querySelector(".coworkLogoB"); 
+    
+            coworkLogoB.addEventListener('click', () => {
+                location.href = "/"; 
+            })
+    
+        </script>
+
     </body>
 </html>
