--- a/coworkProject/src/main/resources/templates/common/main.html
+++ b/coworkProject/src/main/resources/templates/common/main.html
@@ -13,12 +13,13 @@
         <th:block th:replace="~{common/header}"></th:block>
 		
         <main>
-
+            <!-- 메인 비디오 영역 -->
             <section class="videoArea">
-                <video width="100%" autoplay loop>
+                <video width="100%" autoplay loop muted playsinline>
                     <source src="/images/coworkVideo4.mp4" type="video/mp4">
                     이 문장은 여러분의 브라우저가 video 태그를 지원하지 않을 때 화면에 표시됩니다!
                 </video>
+              <!--  <div class="thumbnail" id="thumbnail"></div> -->
             </section>
 
             <!-- 메인 배너 영역 -->
@@ -37,106 +38,29 @@
                     </div>
                 </div>                       
                 <img src="/images/bannerImg.jpg" id="bannerImg">
-
-               <!--  <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <div class="carousel1">
-                            <div class="phraseArea">
-                                <div><span id="coworkLetter">CoWork</span></div>
-                                <div>
-                                    <pre>
-<h4>
-우리의 비즈니스 인트라넷은 
-조직 내 소통과 협업을 혁신적으로 개선하고, 효율성을 극대화 하는데 도움을 줍니다. 
-이제 더 이상 업무 프로세스의 복잡함에 시달리지 마세요. 
-저희의 플랫폼을 통해 스마트하고 간편한 작업 방식으로 조직을 연결하세요.      
-</h4>                                   
-                                    </pre>
-                                </div>
-                              <img src="/images/coworksogae.png" id="coworkPhrase" class="d-block w-45" alt="...">
-                            </div>    
-                            <img src="/images/bannerImg.jpg" id="bannerImg">  
-                        </div>  
-                      </div>
-                      <div class="carousel-item">
-                        <div class="carousel2">
-                            <img src="/images/intranet_image4.png" class="d-block w-45" id="intranetImage2" alt="...">
-                            <div id="intranetImage2Description">
-                                <pre>
-<h1>쉬운 사용성</h1>
-<h5>
-CoWork 코워크는 비즈니스 커뮤니케이션을 넓힙니다.
-다양한 연령대의 전 직원 누구나 쉽게 사용할 수 있습니다. 
-</h5>
-                                </pre>
-                            </div>
-                        </div>
-                      </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>  --> 
-
             </section>
 
 
             <!-- 배너 밑 네비바 영역 -->
             <section>
                 <div class="mainNav">
-                    <div><a class="navBtn" href="#">전자 결재</a></div>
-                    <div><a class="navBtn" href="#">메신저</a></div>
-                    <div><a class="navBtn" href="#">게시판</a></div>
-                    <div><a class="navBtn" href="#">캘린더</a></div>
-                    <div><a class="navBtn" href="#">할 일</a></div>
-                    <div><a class="navBtn" href="#">메일</a></div>
-                    <div><a class="navBtn" href="#">주소록</a></div>
-                    <div><a class="navBtn" href="#">설문</a></div>
-                    <div><a class="navBtn" href="#">예약</a></div>
+                    <div><button class="navBtn" onclick="showSection('edsmSection')">전자 결재</button></div>
+                    <div><button class="navBtn" onclick="showSection('messengerSection')">메신저</button></div>
+                    <div><button class="navBtn" onclick="showSection('boardSection')">게시판</button></div>
+                    <div><button class="navBtn" onclick="showSection('calendarSection')">캘린더</button></div>
+                    <div><button class="navBtn" onclick="showSection('todoSection')">할 일</button></div>
+                    <div><button class="navBtn" onclick="showSection('mailSection')">메일</button></div>
+                    <div><button class="navBtn" onclick="showSection('addressSection')">주소록</button></div>
+                    <div><button class="navBtn" onclick="showSection('surveySection')">설문</button></div>
+                    <div><button class="navBtn" onclick="showSection('reservationSection')">예약</button></div>
                 </div>
             </section>
-
-            <!-- 배너 영역
-            <section class="bannerArea">
-            </section> -->
 
             <!-- 기능 설명 영역 -->
             <section class="functionArea">
 
-                <!-- 캘린더 -->
-                <section id="calendarSection">
-                    <div>
-                        <img src="/images/calendar.png" id="calendarImg">
-                        <div class="description">  
-                            <pre>
-<h1>일정을 효율적으로 관리하고 공유하는 캘린더</h1>
-회사 내 중요한 일정을 직원들과 공유할 수 있어 편리합니다. 
-본인이 속한 부서별 일정 등을 분류해서 볼 수 있어 편리합니다. 
-                            </pre>
-                        </div>     
-                    </div>
-                    <div>
-                        <img>
-                        <div class="description">
-                            <pre>
-<h1>동료의 일정을 한눈에 보는 구성원 일정 보기</h1>                         
-                            </pre>
-                        </div>
-                    </div>
-                </section>
-
                 <!-- 전자 결재 -->
-                <section class="edsmSection">
+                <section id="edsmSection" class="contentSection">
                     <div>
                        <!--<img src="/images/edsmList.png"> --> 
                         <div class="description">
@@ -176,73 +100,96 @@ CoWork 코워크는 비즈니스 커뮤니케이션을 넓힙니다.
                         </div>    
                     </div>
                 </section>
+
+                <!-- 메신저 -->
+                <section id="messengerSection" class="contentSection">
+
+                </section>
+                <!-- 게시판 -->
+                <section id="boardSection" class="contentSection">
+
+                </section>
+                
+                <!-- 캘린더 -->
+                <section id="calendarSection" class="contentSection">
+                    <div>
+                        <img src="/images/calendar.png" id="calendarImg">
+                        <div class="description">  
+                            <pre>
+                <h1>일정을 효율적으로 관리하고 공유하는 캘린더</h1>
+                회사 내 중요한 일정을 직원들과 공유할 수 있어 편리합니다. 
+                본인이 속한 부서별 일정 등을 분류해서 볼 수 있어 편리합니다. 
+                            </pre>
+                        </div>     
+                    </div>
+                    <div>
+                        <img>
+                        <div class="description">
+                            <pre>
+                <h1>동료의 일정을 한눈에 보는 구성원 일정 보기</h1>                         
+                            </pre>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- 할 일 -->
+                <section id="todoSection" class="contentSection">
+
+                </section>
+                <!-- 메일 -->
+                <section id="mailSection" class="contentSection">
+
+                </section>
+                <!-- 주소록 -->
+                <section id="addressSection" class="contentSection">
+
+                </section>
+                <!-- 설문 -->
+                <section id="surveySection" class="contentSection">
+
+                </section>
+                <!-- 예약 -->
+                <section id="reservationSection" class="contentSection">
+
+                </section>
+
             </section>
 
-            <textarea style="display: none;">
-                ~~ 전자결재 ~~
+            <!-- 챗봇 아이콘 -->
+            <div id="icon-container" class="icon-container">
+                <div id="chatbot-icon" class="chatbot-icon">
+                    💬
+                </div>
+                <!-- 다른 아이콘 추가 -->
+            </div>
 
-코워크에서 시작하는 신속한 전자결재 
-
-별도 앱을 설치할 필요없이 코워크에서 시작해보세요. 
-조직 정보가 바로 연동되어 결재 권한 관리가 간편해요. 
-
-
-의사 결정을 빠르고 정확하게 
-
-승인, 반려 등 결재 진행을 실시간으로 확인하고 
-쉽게 처리하세요. 
-
-
-오프라인 결재 과정을 그대로 온라인에서 
-
-결재, 반려, 등 다양한 결재 기능과 결재문서 기본 템플릿을 자유롭게 활용하세요. 
-
-
-~~ 메신저 ~~
-
-익숙하고 편리한 기능 그대로 
-
-업무 메신저 기능을 누구나 쉽게 사용할 수 있도록 만들어졌습니다. 
-모두에게 적용되는 채팅방 이름과 사진으로 
-대화방을 완벽하게 구분하고 빠르게 흘러가는 업무대화를 놓치지 마세요 
-
-효율적인 협업에 필요한 그룹 메시지 방 
-
-다른 부서 팀원이나 협업해야 할 때는 그룹 메시지 방을 활용해 효과적으로 협업해보세요. 
-그룹 메세지방에서는 보다 쉽게 업무 자료를 보관, 공유할 수 있고 공동 일정을 함께 세우며 프로젝트를 진행할 수 있습니다. 
-
-
-~~ 게시판 ~~
-
-사내 소식을 빠르게 전하는 게시판 
-
-중요한 정보를 전 직원에게 일일이 전달하기 번거롭다면, 
-공지 게시판을 활용해 쉽게 전사 공유할 수 있습니다. 
-
-
-조직 내 활발한 소통을 이끄는 게시글과 댓글 
-
-텍스트 뿐만 아니라 파일 등 다양한 콘텐츠의 게시글을 작성할 수 있습니다. 
-
-
-~~ 캘린더 ~~
-
-일정을 효율적으로 관리하고 공유하는 캘린더 
-
-회사 내 중요한 일정을 직원들과 공유할 수 있어 편리합니다. 
-본인이 속한 부서별 일정 등을 분류해서 볼 수 있어 편리합니다. 
-
-
-동료의 일정을 한눈에 보는 구성원 일정 보기 
-
-            </textarea>
-
-        </main>
+            <!-- 챗봇 모달 -->
+            <div id="chatbot-modal" class="chatbot-modal">
+                <div class="chat-container">
+                    <header class="chat-header">
+                        <h4>코워크 챗봇</h4>
+                        <span id="close-btn" class="close-btn">&times;</span>
+                    </header>
+                    <main class="chat-main" id="chatMain">
+                        <div id="respChat" class="chat-box"></div>
+                    </main>
+                    <footer class="chat-footer">
+                        <input type="text" id="inputChat" placeholder="무엇이든 물어보세요">
+                        <button id="buttonChat">전송</button>
+                    </footer>
+                </div>
+            </div>
         
+       
+        </main>
+        <!-- 푸터 -->
         <th:block th:replace="~{common/footer}"></th:block>
 
+        <!-- JS -->
+        <script src="/js/common/main.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
 
 </html>
